# bank-payments

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
bank_mock/: main.py  router.py  schemas.py  storage.py
src/: celery_app.py  config.py  database.py  exceptions.py  main.py
src/bank/: client.py  config.py  constants.py  exceptions.py  schemas.py
src/migrations/models/: 0_20260306103837_init.py  1_20260306120000_seed_orders.py
src/orders/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  seed.py  service.py
src/payments/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  tasks.py
tests/: conftest.py  factories.py  test_orders.py  test_payments.py
